crates/bytecode_compiler/src/snapshots/mylang_bytecode_compiler__tests__addition_to_bytecode.snap
---
source: crates/bytecode_compiler/src/lib.rs
assertion_line: 67
expression: bytecode

---
[
    I32Const(
        3,
    ),
    I32Const(
        4,
    ),
    I32Add,
]
