crates/bytecode_compiler/src/snapshots/mylang_bytecode_compiler__tests__i32_lit_to_bytecode.snap
---
source: crates/bytecode_compiler/src/lib.rs
assertion_line: 51
expression: "expr_to_bytecode(&Expr::I32Lit(Range::default(), 3))"

---
[
    I32Const(
        3,
    ),
]
