crates/bytecode_compiler/src/snapshots/mylang_bytecode_compiler__tests__print_i32_to_bytecode.snap
---
source: crates/bytecode_compiler/src/lib.rs
assertion_line: 74
expression: bytecode

---
[
    I32Const(
        3,
    ),
    PrintI32,
]
