crates/bytecode_compiler/src/snapshots/mylang_bytecode_compiler__tests__print_str_to_bytecode.snap
---
source: crates/bytecode_compiler/src/lib.rs
assertion_line: 84
expression: bytecode

---
[
    StrConst(
        "Hello, world!",
    ),
    PrintStr,
]
