crates/bytecode_compiler/src/snapshots/mylang_bytecode_compiler__tests__str_lit_to_bytecode.snap
---
source: crates/bytecode_compiler/src/lib.rs
assertion_line: 57
expression: bytecode

---
[
    StrConst(
        "Hello",
    ),
]
